# nao_collaborative_motion

./: README.md  setup.bash  setup.sh  setup.zsh
nao_behavior_tree/: .cproject  .nao.wbproj  .nao_odometry.wbproj  .project  .pydevproject  CMakeCache.txt  CMakeLists.txt  Makefile  bt.txt  bt1.txt  bt1_gotopoint.txt  bt1_head_tracker.txt  bt1_obstacles.txt  bt1_search.txt  bt1_test.txt  bt1_test_bearing.txt  bt2.txt  bt2_test.txt  bt2_test_bearing.txt  bt2_walk.txt  bt_TAO.txt  bt_bearing.txt  bt_localization.txt  bt_obstacles.txt  bt_test.txt  bt_test_sync.txt  cmake_install.cmake  mainpage.dox  manifest.xml  nao.wbt  nao_localization.wbt  nao_odometry.wbt
nao_behavior_tree/include/nao_behavior_tree/: Search.hpp  display.h  navigation.h  node.h  rosaction.h
nao_behavior_tree/include/nao_behavior_tree/actions/: GoClose.hpp  GoToPoint.hpp  HeadTracker.hpp  Search.hpp  TrackingAmongObstacles.hpp
nao_behavior_tree/include/nao_behavior_tree/filters/: particleFilter.hpp
nao_behavior_tree/include/nao_behavior_tree/map/: PF.hpp  localization.hpp  obstacles.hpp  webcam.hpp
nao_behavior_tree/include/nao_behavior_tree/tools/: color_filter_calibration.hpp
nao_behavior_tree/launch/: Bearing.launch  CollaborativeMotion.launch  ColorFilterCalibration.launch  GoToPoint.launch  GoToPoint_sim.launch  Greet.launch  HeadTracker.launch  HeadTracker_sim.launch  Leds.launch  Localization.launch  Localization_Hands.launch  NaoBehaviorTree1.launch  NaoBehaviorTree1_bearing.launch  NaoBehaviorTree1_bearing_sim.launch  NaoBehaviorTree1_sim.launch  NaoBehaviorTree2.launch  NaoBehaviorTree2_bearing.launch  Obstacles.launch  ObstaclesCreation.launch  ObstaclesNormal.launch  ObstaclesTest.launch  Remote.launch  Test.launch  TestSync1.launch  TestTree1.launch  Walk.launch  WebcamCalibration.launch  parameters.yaml  parameters.yaml~  parameters_sim.yaml  webcam.yaml
nao_behavior_tree/launch/exchange/: bt.launch  nao1.launch  nao2.launch
nao_behavior_tree/launch/sim/: Bearing_sim.launch  CollaborativeMotion_sim.launch  ColorFilterCalibration_sim.launch  GoToPoint_sim.launch  HeadTracker_sim.launch  Localization_sim.launch  NaoBehaviorTree1_bearing_sim.launch  NaoBehaviorTree1_sim.launch  NaoBehaviorTree2_bearing_sim.launch  NaoBehaviorTree2_sim.launch  Obstacles1_sim.launch  ObstaclesCreation_sim.launch  ObstaclesNormal_sim.launch  Search_sim.launch  Test_sim.launch  Walk_sim.launch  Walk_test_sim.launch  parameters_sim.yaml
nao_behavior_tree/msg/: Bearing.msg  ROSAction.msg  ROSActionFeedback.msg  ROSActionGoal.msg  ROSActionResult.msg  ROSFeedback.msg  ROSGoal.msg  ROSResult.msg  Sonar.msg  Velocity.msg
nao_behavior_tree/msg_gen/lisp/: Bearing.lisp  Odometry.lisp  ROSAction.lisp  ROSActionFeedback.lisp  ROSActionGoal.lisp  ROSActionResult.lisp  ROSFeedback.lisp  ROSGoal.lisp  ROSResult.lisp  Sonar.lisp  Velocity.lisp  _package.lisp  _package_Bearing.lisp  _package_Odometry.lisp  _package_ROSAction.lisp  _package_ROSActionFeedback.lisp  _package_ROSActionGoal.lisp  _package_ROSActionResult.lisp  _package_ROSFeedback.lisp  _package_ROSGoal.lisp  _package_ROSResult.lisp  _package_Sonar.lisp  _package_Velocity.lisp  nao_behavior_tree-msg.asd
nao_behavior_tree/src/: main.cpp
nao_behavior_tree/src/actions/: GoClose.cpp  GoToPoint.cpp  Greet.cpp  Greet.cpp~  HeadTracker.cpp  HeadTracker.cpp~  Search.cpp  Search.cpp~  Stop.cpp  StopWalking.cpp  TrackingAmongObstacles.cpp  TrackingAmongObstacles.cpp~  Walk.cpp
nao_behavior_tree/src/behavior_tree/: display.cpp  keystroke.cpp  main.cpp  navigation.cpp  node.cpp  parser.cpp  rosaction.cpp
nao_behavior_tree/src/exchange/: BTObjectServer.cpp  BTObjectServer.h  RobotMove.cpp  RobotMove.h  WQUPC.cpp  WQUPC.h  bt_exchange.txt  bt_test.txt  imageconverter.cpp  imageconverter.h
nao_behavior_tree/src/exchange/actions/: Catch.cpp  ChangeHandBall.cpp  Drop.cpp  GiveBall.cpp  TakeBall.cpp
nao_behavior_tree/src/filters/: particleFilter.cpp
nao_behavior_tree/src/leds/: nao_leds.cpp
nao_behavior_tree/src/map/: localization.cpp  obstacles.cpp
nao_behavior_tree/src/nao/: nao_leds.cpp  nao_leds.cpp~  nao_sonar.cpp  nao_sonar.cpp~
nao_behavior_tree/src/nao_behavior_tree/msg/: _Bearing.py  _Odometry.py  _ROSAction.py  _ROSActionFeedback.py  _ROSActionGoal.py  _ROSActionResult.py  _ROSFeedback.py  _ROSGoal.py  _ROSResult.py  _Sonar.py  _Velocity.py  __init__.py
nao_behavior_tree/src/nao_behavior_tree/srv/: _ArmReadyBT.py  _BallPosChangeBT.py  _BallPosForHand.py  _BallPosForHead.py  _BallPosGetBT.py  _GetArmReadyBT.py  (+1 more)
nao_behavior_tree/src/sensors/: nao_sonar.cpp
nao_behavior_tree/src/tools/: color_filter_calibration.cpp  remote.cpp  remote.cpp~
nao_behavior_tree/srv/: ArmReadyBT.srv  BallPosChangeBT.srv  BallPosForHand.srv  BallPosForHead.srv  BallPosGetBT.srv  GetArmReadyBT.srv
nao_behavior_tree/srv_gen/lisp/: ArmReadyBT.lisp  BallPosChangeBT.lisp  BallPosForHand.lisp  BallPosForHead.lisp  BallPosGetBT.lisp  GetArmReadyBT.lisp  _package.lisp  _package_BallPosChangeBT.lisp  _package_BallPosForHand.lisp  _package_BallPosForHead.lisp  _package_BallPosGetBT.lisp  _package_GetArmReadyBT.lisp  nao_behavior_tree-srv.asd
nao_custom/: .cproject  .project  .pydevproject  CMakeCache.txt  CMakeLists.txt  Makefile~  behavior_hello.crg  cmake_install.cmake  mainpage.dox  manifest.xml  nao_sonar.xml
nao_custom/behavior_hello/: behavior.xar
nao_custom/launch/: nao_behavior.launch  nao_sonar.launch
nao_custom/msg/: Sonar.msg
nao_custom/msg_gen/lisp/: Sonar.lisp  _package.lisp  _package_Sonar.lisp  nao_custom-msg.asd
nao_custom/src/: nao_behavior.cpp  nao_sonar.cpp
naos_localization/: .cproject  .project  .pydevproject  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mainpage.dox  manifest.xml
naos_localization/include/naos_localization/: PF.hpp  nao.hpp
naos_localization/launch/: exp.launch  hands.launch  localization.launch  naos.launch
naos_localization/msg/: Odometry.msg
naos_localization/msg_gen/lisp/: Odometry.lisp  _package.lisp  _package_Odometry.lisp  naos_localization-msg.asd
naos_localization/src/: main.cpp
(+119 files in other folders)
